<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#395baa">


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll"
        android:orientation="vertical">
        <ImageView

            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/face" />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <EditText
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/name"
            android:textColor="@color/black" />

        <EditText
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/pass" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#3B5897"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/white" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/black" />


</RelativeLayout>